changed trace cache not to use memory mapping when building cache (because of java bug in releasing memory maps)