@@ -20,13 +20,11 @@ import eu.geclipse.traceview.IPhysicalTrace;
 import eu.geclipse.traceview.IProcess;
 import eu.geclipse.traceview.ITrace;
 import eu.geclipse.traceview.ITraceReader;
-import eu.geclipse.traceview.utils.AbstractTrace;
+import eu.geclipse.traceview.utils.AbstractTraceFileCache;
 import eu.geclipse.traceview.utils.ClockCalculator;
 
-public class OTFReader extends AbstractTrace
-  implements IPhysicalTrace, ILamportTrace, ITraceReader
-{
-
+public class OTFReader extends AbstractTraceFileCache
+  implements IPhysicalTrace, ILamportTrace, ITraceReader {
   private BufferedReader input;
   private Map<Integer, List<Integer>> streamMap = new HashMap<Integer, List<Integer>>();
   private Map<Integer, Integer> processIdMap = new HashMap<Integer, Integer>();
@@ -38,22 +36,28 @@ public class OTFReader extends AbstractTrace
 
   public ITrace openTrace( final IPath tracePath, final IProgressMonitor monitor ) throws IOException {
     File file = tracePath.toFile();
+    long modTime = file.lastModified();
     this.input = new BufferedReader( new FileReader( file ) );
     this.filenameBase = file.getAbsolutePath()
       .substring( 0, file.getAbsolutePath().length() - 4 );
     this.filename = file.getName();
-    readOTF( monitor );
-    for( Process process : this.processes ) {
-      process.doneReading();
+    readOTFMapping( monitor );
+    boolean hasCache = openCacheDir( file.getAbsolutePath(), modTime );
+    if ( !readOTFData( hasCache, monitor ) ) return null;
+    enableMemoryMap();
+    if (!hasCache) {
+      if (monitor.isCanceled()) return null;
+      monitor.subTask( "Calculating logical clocks" );
+      ClockCalculator.calcPartnerLogicalClocks(this);
+      if (monitor.isCanceled()) return null;
+      monitor.subTask( "Calculating lamport clocks" );
+      ClockCalculator.calcLamportClock(this);
+      saveCacheMetadata();
     }
-    monitor.subTask( "Calculating logical clocks" );
-    ClockCalculator.calcPartnerLogicalClocks(this);
-    monitor.subTask( "Calculating lamport clocks" );
-    ClockCalculator.calcLamportClock(this);
     return this;
   }
 
-  private void readOTF( final IProgressMonitor monitor ) throws IOException {
+  private void readOTFMapping( final IProgressMonitor monitor ) throws IOException {
     while( ( this.otfUtils.line = this.input.readLine() ) != null ) {
       this.otfUtils.lineIdx = 0;
       parseStreamFileDef();
@@ -62,13 +66,19 @@ public class OTFReader extends AbstractTrace
     for( int i = 0; i < this.numProcs; i++ ) {
       this.processes[ i ] = new Process( i, this );
     }
-    Set<Integer> streamNrs = this.streamMap.keySet();
-    monitor.beginTask( "Loading trace", streamNrs.size() );
-    for( Integer streamNr : streamNrs ) {
-      monitor.subTask( "Loading stream " + streamNr );
-      loadStream( streamNr.intValue() );
-      monitor.worked( 1 );
+  }
+  private boolean readOTFData( final boolean hasCache, final IProgressMonitor monitor ) throws IOException {
+    if (!hasCache) {
+      Set<Integer> streamNrs = this.streamMap.keySet();
+      monitor.beginTask( "Loading trace", streamNrs.size() );
+      for( Integer streamNr : streamNrs ) {
+        if (monitor.isCanceled()) return false;
+        monitor.subTask( "Loading stream " + streamNr );
+        loadStream( streamNr.intValue() );
+        monitor.worked( 1 );
+      }
     }
+    return true;
   }
 
   private void loadStream( final int nr ) throws IOException {
@@ -77,17 +87,17 @@ public class OTFReader extends AbstractTrace
   }
 
   private void parseStreamFileDef() {
-    Integer streamNr = new Integer( this.otfUtils.readNumber() );
+    Integer streamNr = Integer.valueOf( this.otfUtils.readNumber() );
     this.otfUtils.checkChar( ':' );
     do {
-      Integer processNr = new Integer( this.otfUtils.readNumber() );
+      Integer processNr = Integer.valueOf( this.otfUtils.readNumber() );
       List<Integer> processList = this.streamMap.get( streamNr );
       if( processList == null ) {
         processList = new LinkedList<Integer>();
         this.streamMap.put( streamNr, processList );
       }
       processList.add( processNr );
-      this.processIdMap.put( processNr, new Integer( this.numProcs ) );
+      this.processIdMap.put( processNr, Integer.valueOf( this.numProcs ) );
       this.numProcs++;
     } while( this.otfUtils.read() == ',' );
   }
@@ -103,7 +113,7 @@ public class OTFReader extends AbstractTrace
   }
 
   int getProcessIdForOTFIndex( final int processId ) {
-    return this.processIdMap.get( new Integer( processId ) ).intValue();
+    return this.processIdMap.get( Integer.valueOf( processId ) ).intValue();
   }
 
   Process getProcessTraceForOTFIndex( final int processId )
@@ -141,5 +151,10 @@ public class OTFReader extends AbstractTrace
 
   public IPath getPath() {
     return null;
+  }
+
+  @Override
+  public int getEventSize() {
+    return 17;
   }
 }
